--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lijish Website</title>
+    <link rel="shortcut icon" href="https://ucarecdn.com/f329295b-9b7c-4c0e-ab7f-402914c87c95/-/preview/586x270/-/quality/smart/-/format/auto/" type="image/x-icon">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -57,7 +58,7 @@
                     </script>
               </div>
               <div class="col-md-10 align-items-center  mx-auto col-lg-5">
-                <img src="./DSC_1061.JPG" class=" m-auto lmx-lg-auto img-fluid rounded-circle" alt="My-logo" width="350" height="300" loading="lazy">
+                <img src="https://ucarecdn.com/ce49a2d7-2a4e-4c6d-a80f-4b588af8ac6a/" class=" m-auto lmx-lg-auto img-fluid rounded-circle" alt="My-logo" width="350" height="300" loading="lazy">
               </div>
             </div>
           </div>
@@ -117,7 +118,7 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 22rem;">
-              <img src="./pr 1.png" class="card-img-top img-fluid" alt="...">
+              <img src="https://ucarecdn.com/6c5f968d-b395-4c36-a117-eeed4ca83c36/-/preview/586x270/-/quality/smart/-/format/auto/" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Encryption and Decryption using ALAS cipher</h5>
                 <p class="card-text">In which the user need to enter the plain text , which will be converted into unreadable format such as ACTG in which we used HTML, CSS and JS . bootstrap<br>For more details visit the repository.</p>
@@ -127,7 +128,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 22rem;">
-              <img src="./ptrl.jpeg" class="card-img-top img-fluid" alt="...">
+              <img src="https://ucarecdn.com/f2a9f46c-a960-4c0f-85ab-586cf8da12ee/-/preview/586x270/-/quality/smart/-/format/auto/" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Patrol Robot to Improve Safety in Blind Spots</h5>
                 <p class="card-text">In this project we created an patrol robot which uses sound sensor and CNN modules, the working are the patrol robot goes in an autonomous way when it detects sound. <br>For more details visit the repository.</p>
@@ -137,7 +138,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 22rem;">
-              <img src="./Screenshot (27).png" class="card-img-top img-fluid" alt="...">
+              <img src="https://ucarecdn.com/88f4c582-5352-48e9-8cc1-56b42e987b3d/-/preview/586x270/-/quality/smart/-/format/auto/" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">My personal Portfolio website for projecting my skills</h5>
                 <p class="card-text">In this project we created an 
@@ -157,7 +158,7 @@
       <div class="container fm">
         <div class="row">
           <div class="col text-center">
-            <img src="./crpcnt.jpg" class="img-thumbnail" alt="">
+            <img src="https://ucarecdn.com/a8297323-1880-493b-b2b7-d26990884cb6/-/preview/586x270/-/quality/smart/-/format/auto/" class="img-thumbnail" alt="">
 
           </div>
           <div class="col">
