--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/e192675c65.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div id="preloader"></div>
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
           <a class="navbar-brand px-5 fs-4 " href="#"><span>LW</span></a>
