--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/e192675c65.js" crossorigin="anonymous"></script>
+<script src = 
+"https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js">
+        </script>
 </head>
 <body>
-    <div id="preloader"></div>
+  <div id="preloader">
+    <div id="status">&nbsp;</div>
+  </div>
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
           <a class="navbar-brand px-5 fs-4 " href="#"><span>LW</span></a>
